fix style issues of admin for highContrastTheme

--- a/feature-libs/organization/administration/styles/_list.scss
+++ b/feature-libs/organization/administration/styles/_list.scss
@@ -340,6 +340,17 @@
     .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
       white-space: normal;
       overflow: initial;
+
+      @include forFeature('a11yDropdownHighContrast') {
+        @include cx-highContrastTheme {
+          background-color: var(--cx-color-background);
+          color: var(--cx-color-text);
+          &.ng-option-marked {
+            background-color: var(--cx-color-text);
+            color: var(--cx-color-background);
+          }
+        }
+      }
     }
   }
 }
